--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -149,19 +149,58 @@
   "@context": "https://schema.org",
   "@type": "ProfessionalService",
   "name": "Vlada Zapesotsky – Trauma-Informed Support",
-  "url": "https://vladacare.com/",
+  "url": "https://vladacare.com/WorkWithMe.html",
   "image": "https://vladacare.com/og-image.jpg",
-  "description": "Trauma-informed, somatic and experiential mental health support focused on regulation, resilience, and emotional well-being.",
-  "areaServed": {
-    "@type": "Place",
-    "name": "Online / Telehealth"
+  "description": "Trauma-informed, somatic and experiential mental health support focused on emotional regulation, resilience, and present-moment capacity building.",
+  "areaServed": [
+    {
+      "@type": "Place",
+      "name": "Online"
+    },
+    {
+      "@type": "Place",
+      "name": "In-person"
+    }
+  ],
+  "provider": {
+    "@type": "Person",
+    "name": "Vlada Zapesotsky",
+    "url": "https://vladacare.com/",
+    "sameAs": [
+      "https://www.linkedin.com/in/vlada-zapesotsky-48237a1/"
+    ]
   },
-  "serviceType": "Trauma-informed mental health support",
-  "sameAs": [
-    "https://www.linkedin.com/in/vlada-zapesotsky-48237a1/"
-  ]
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Ways to Work With Me",
+    "itemListElement": [
+      {
+        "@type": "Offer",
+        "name": "Introductory Consultation",
+        "url": "https://vladazapesotsky.as.me/?appointmentType=86419526",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Introductory Consultation",
+          "serviceType": "Trauma-informed support (non-clinical)",
+          "description": "An introductory conversation to explore fit, goals, and support needs."
+        }
+      },
+      {
+        "@type": "Offer",
+        "name": "Ongoing Support Session",
+        "url": "https://vladazapesotsky.as.me/?appointmentType=86591312",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Support Session",
+          "serviceType": "Somatic and experiential mental health support",
+          "description": "Ongoing trauma-informed, somatic and experiential support sessions."
+        }
+      }
+    ]
+  }
 }
 </script>
+
     
   </head>
 
