--- a/index.html
+++ b/index.html
@@ -368,10 +368,16 @@
   "url": "https://vladacare.com/",
   "image": "https://vladacare.com/og-image.jpg",
   "description": "Trauma-informed, somatic and experiential mental health support focused on regulation, resilience, and emotional well-being.",
-  "areaServed": {
-    "@type": "Place",
-    "name": "Online / Telehealth"
-  },
+ "areaServed": [
+    {
+      "@type": "Place",
+      "name": "Online"
+    },
+    {
+      "@type": "Place",
+      "name": "In-person"
+    }
+  ],
   "serviceType": "Trauma-informed mental health support",
   "sameAs": [
     "https://www.linkedin.com/in/vlada-zapesotsky-48237a1/"
