--- a/home.html
+++ b/home.html
@@ -255,7 +255,7 @@
             Vlada Zapesotsky
         </div>
         <nav class="hidden md:flex items-center space-x-8 lg:space-x-12">
-            <a href="home.html" class="text-primary-brand font-semibold tracking-wide">Home</a>
+            <a href="home.html" aria-current="page" class="text-primary-brand font-semibold tracking-wide">Home</a>
             <a href="index.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
             <a href="WorkWithMe.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
         </nav>
