--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -215,7 +215,7 @@
       <nav class="hidden lg:flex items-center justify-center space-x-12">
         <a href="/home.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
         <a href="/index.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
-        <a href="/WorkWithMe.html" class="text-primary-brand font-semibold tracking-wide">Work With Me</a>
+        <a href="/WorkWithMe.html" aria-current="page" class="text-primary-brand font-semibold tracking-wide">Work With Me</a>
       </nav>
 
       <div class="hidden lg:flex items-center justify-end">
