--- a/home.html
+++ b/home.html
@@ -657,7 +657,7 @@
                         </p>
                     </div>
                     <div class="pt-6">
-                        <button type="button" onclick="window.location.href='Index.html'" class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl">
+                        <button type="button" onclick="window.location.href='/'" class="px-10 py-4 bg-primary-brand text-white rounded-full font-light tracking-wide hover:bg-opacity-90 transition-all duration-300 shadow-lg hover:shadow-xl">
                             Learn More About Me
                         </button>
                     </div>
