--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en"><head>
+ <html lang="en"><head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1227,7 +1227,7 @@
             <ul class="space-y-4">
               <li><a href="home.html" class="hover:text-primary-brand transition font-light">Home</a>
               </li>
-              <li><a href="index.html" class="hover:text-primary-brand transition font-light">About</a>
+              <li><a href="/" class="hover:text-primary-brand transition font-light">About</a>
               </li>
               <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Services</a>
               </li>
