--- a/home.html
+++ b/home.html
@@ -256,7 +256,7 @@
         </div>
         <nav class="hidden md:flex items-center space-x-8 lg:space-x-12">
             <a href="home.html" aria-current="page" class="text-primary-brand font-semibold tracking-wide">Home</a>
-            <a href="index.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
+            <a href="/" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
             <a href="WorkWithMe.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Work With Me</a>
         </nav>
         <div class="flex items-center space-x-4">
@@ -271,7 +271,7 @@
     <div id="mobile-menu" class="hidden md:hidden bg-white/95 backdrop-blur-md border-t border-gray-100">
         <nav class="px-4 py-6 space-y-4">
             <a href="/home.html" class="block text-primary-brand font-semibold tracking-wide py-2">Home</a>
-            <a href="/index.html" class="block text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide py-2">About</a>
+            <a href="/" class="block text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide py-2">About</a>
             <a href="/WorkWithMe.html" class="block text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide py-2">Work With Me</a>
             <button type="button" onclick="window.open('https://app.acuityscheduling.com/schedule.php?owner=37720609', '_blank', 'noopener,noreferrer')" class="btn-animated w-full px-6 py-3 bg-primary-brand text-white rounded-full font-light tracking-wide text-sm mt-4">
                 Schedule Consultation
@@ -779,7 +779,7 @@
                     <h4 class="heading-font text-lg sm:text-xl font-light text-white mb-4 sm:mb-6">Quick Links</h4>
                     <ul class="space-y-3 sm:space-y-4 text-sm sm:text-base">
                         <li><a href="home.html" class="hover:text-primary-brand transition font-light">Home</a></li>
-                        <li><a href="index.html" class="hover:text-primary-brand transition font-light">About</a></li>
+                        <li><a href="/" class="hover:text-primary-brand transition font-light">About</a></li>
                         <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Services</a></li>
                         <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Approach</a></li>
                         <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Resources</a></li>
