--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head>
+ <!DOCTYPE html><html lang="en"><head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -214,7 +214,7 @@
       
       <nav class="hidden lg:flex items-center justify-center space-x-12">
         <a href="/home.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">Home</a>
-        <a href="/index.html" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
+        <a href="/" class="text-gray-600 hover:text-primary-brand transition-colors duration-300 font-light tracking-wide">About</a>
         <a href="/WorkWithMe.html" aria-current="page" class="text-primary-brand font-semibold tracking-wide">Work With Me</a>
       </nav>
 
@@ -237,7 +237,7 @@
     <div id="mobile-menu" class="hidden lg:hidden mt-6 pb-4 border-t border-gray-100 pt-6">
       <nav class="flex flex-col space-y-4">
         <a href="home.html" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">Home</a>
-        <a href="index.html" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">About</a>
+        <a href="/" class="text-gray-700 hover:text-primary-brand transition font-light text-lg py-2">About</a>
         <a href="WorkWithMe.html" class="text-primary-brand font-medium text-lg py-2">Work With Me</a>
       </nav>
     </div>
@@ -810,9 +810,9 @@
             <h4 class="heading-font text-lg sm:text-xl font-light text-white mb-4 sm:mb-6">Quick Links</h4>
             <ul class="space-y-3 sm:space-y-4 text-sm sm:text-base">
               <li><a href="home.html" class="hover:text-primary-brand transition font-light">Home</a></li>
-              <li><a href="index.html" class="hover:text-primary-brand transition font-light">About</a></li>
+              <li><a href="/" class="hover:text-primary-brand transition font-light">About</a></li>
               <li><a href="WorkWithMe.html" class="hover:text-primary-brand transition font-light">Work With Me</a></li>
-              <li><a href="index.html" class="hover:text-primary-brand transition font-light">Resources</a></li>
+              <li><a href="/" class="hover:text-primary-brand transition font-light">Resources</a></li>
             </ul>
           </div>
           <div>
