--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Vlada Zapesotsky | Trauma-Informed Mental Health Support </title>
     <meta name="description" content="Trauma-informed, somatic and experiential Mental Health Support with Vlada Zapesotsky for adults, parents, adolescents, mental health professionals and leaders.">
 
-    <link rel="canonical" href="https://vladacare.com" />
+    <link rel="canonical" href="https://vladacare.com/" />
     <meta name="robots" content="index,follow" />
 
     <meta property="og:site_name" content="Vlada Zapesotsky" />
@@ -347,7 +347,7 @@
   "url": "https://vladacare.com/",
   "jobTitle": "Trauma-Informed Mental Health Practitioner",
   "description": "Trauma-informed mental health support using somatic and experiential approaches focused on nervous system regulation, emotional resilience, and healing.",
-  "image": "https://vladacare.com/og-image.jpg",
+  "image": "https://vladacare.com/vlada_og_image.png",
   "knowsAbout": [
     "Trauma-informed care",
     "Somatic therapy",
@@ -366,7 +366,7 @@
   "@type": "ProfessionalService",
   "name": "Vlada Zapesotsky – Trauma-Informed Support",
   "url": "https://vladacare.com/",
-  "image": "https://vladacare.com/og-image.jpg",
+  "image": "https://vladacare.com/vlada_og_image.png",
   "description": "Trauma-informed, somatic and experiential mental health support focused on regulation, resilience, and emotional well-being.",
  "areaServed": [
     {
@@ -493,7 +493,7 @@
               <div class="absolute -inset-8 bg-gradient-to-br from-primary-brand/10 via-transparent to-accent-rose/5 rounded-[3rem] blur-3xl breathe-animation">
               </div>
               <div class="relative rounded-[2.5rem] overflow-hidden luxury-shadow border border-white/50">
-                  <img src="http://vladacare.com/vlada_main_pic.png"
+                  <img src="https://vladacare.com/vlada_main_pic.png"
                     alt="Professional portrait of a compassionate female therapist" class="w-full h-auto object-cover"></div>
             </div>
           </div>
