--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="description"
      content="Learn about Vlada Zapesotsky’s trauma-informed approach to mental health, nervous system regulation, and emotional resilience."
     />
-<link rel="canonical" href="https://vladacare.com/home.html" />
+<link rel="canonical" href="https://vladacare.com/home.html/" />
 
 <meta property="og:site_name" content="Vlada Zapesotsky" />
 <meta property="og:type" content="website" />
@@ -231,7 +231,7 @@
   "url": "https://vladacare.com/",
   "jobTitle": "Trauma-Informed Mental Health Practitioner",
   "description": "Trauma-informed mental health support using somatic and experiential approaches focused on nervous system regulation, emotional resilience, and healing.",
-  "image": "https://vladacare.com/og-image.jpg",
+  "image": "https://vladacare.com/vlada_og_image.png",
   "knowsAbout": [
     "Trauma-informed care",
     "Somatic therapy",
