--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -10,7 +10,7 @@
      content="Explore ways to work with Vlada Zapesotsky, including trauma-informed, somatic mental health support and consultation options."
     />
     
-    <link rel="canonical" href="https://vladacare.com/WorkWithMe.html" />
+    <link rel="canonical" href="https://vladacare.com/WorkWithMe.html/" />
 
 <meta property="og:site_name" content="Vlada Zapesotsky" />
 <meta property="og:type" content="website" />
