--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -131,7 +131,7 @@
   "url": "https://vladacare.com/",
   "jobTitle": "Trauma-Informed Mental Health Practitioner",
   "description": "Trauma-informed mental health support using somatic and experiential approaches focused on nervous system regulation, emotional resilience, and healing.",
-  "image": "https://vladacare.com/og-image.jpg",
+  "image": "https://vladacare.com/vlada_og_image.png",
   "knowsAbout": [
     "Trauma-informed care",
     "Somatic therapy",
@@ -150,7 +150,7 @@
   "@type": "ProfessionalService",
   "name": "Vlada Zapesotsky – Trauma-Informed Support",
   "url": "https://vladacare.com/WorkWithMe.html",
-  "image": "https://vladacare.com/og-image.jpg",
+  "image": "https://vladacare.com/vlada_og_image.png",
   "description": "Trauma-informed, somatic and experiential mental health support focused on emotional regulation, resilience, and present-moment capacity building.",
   "areaServed": [
     {
