--- a/WorkWithMe.html
+++ b/WorkWithMe.html
@@ -10,7 +10,7 @@
      content="Explore ways to work with Vlada Zapesotsky, including trauma-informed, somatic mental health support and consultation options."
     />
     
-    <link rel="canonical" href="https://vladacare.com/WorkWithMe.html/" />
+    <link rel="canonical" href="https://vladacare.com/WorkWithMe.html" />
 
 <meta property="og:site_name" content="Vlada Zapesotsky" />
 <meta property="og:type" content="website" />
@@ -151,7 +151,7 @@
   "name": "Vlada Zapesotsky – Trauma-Informed Support",
   "url": "https://vladacare.com/WorkWithMe.html",
   "image": "https://vladacare.com/vlada_og_image.png",
-  "description": "Trauma-informed, somatic and experiential mental health support focused on emotional regulation, resilience, and present-moment capacity building.",
+"description": "Trauma-informed, somatic and experiential mental health support for adults, parents, adolescents, and leaders—focused on emotional regulation, nervous system resilience, and present-moment capacity building. Sessions are available online and in person."
   "areaServed": [
     {
       "@type": "Place",
