--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="description"
      content="Learn about Vlada Zapesotsky’s trauma-informed approach to mental health, nervous system regulation, and emotional resilience."
     />
-<link rel="canonical" href="https://vladacare.com/home.html/" />
+<link rel="canonical" href="https://vladacare.com/home.html" />
 
 <meta property="og:site_name" content="Vlada Zapesotsky" />
 <meta property="og:type" content="website" />
